couple small changes to permutation stuff